# rem-verification

./: .gitignore  LICENSE  README.md  SampleProject.v  SampleProjectRef.v  coq_test.v  notes.txt  rust-toolchain.toml
Initial Test/: original.v  refactored.v
Initial Test/sample_project_ref/: Cargo.toml  sample_project_ref.llbc
coq/: EquivCheck.v  Main.v  MainRef.v  _CoqProject  main.llbc  main_ref.llbc
llbc/: EquivCheck.v  Primitives.v  _CoQProject  cleanup.sh  sample_project.llbc
verifyer/: Cargo.toml  Config.toml  README.md
verifyer/src/: Primitives.v  args.rs  convert.rs  error.rs  lib.rs  local_config.rs  logging.rs  main.rs  verify.rs
verifyer/src/messages/: about.rs  author.rs  mod.rs
