[package]
name = "rem-verification"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
config = "0.15.9"
flexi_logger = "0.29.8"
log = "0.4.26"
regex = "1.11.1"
rem-utils = { path = "../../rem-utils" }
serde = { version = "1.0.218", features = ["derive", "serde_derive"] }
