[package]
name = "rem-verification"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Britton <matt.britton@anu.edu.au>"]
license = "MIT"
description = "Verification tool for the REM toolchain. Built to be implemented into the VSCode extension for REM. Relies on AENEAS and CoQ"
repository = "https://github.com/RuleBrittonica/rem-verification"
categories = ["development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
config = "0.15.9"
flexi_logger = "0.29.8"
log = "0.4.26"
regex = "1.11.1"
# rem-utils = { path = "../../rem-utils" }
rem-utils="0.1.6"
serde = { version = "1.0.218", features = ["derive", "serde_derive"] }
